<resources>
    <string name="app_name">ALCAndroidProject</string>
    <string name="my_profile">My Profile</string>
    <string name="about_alc">About ALC</string>
    <string name="welcome_to_alc_4_0">Welcome To ALC 4.0!</string>
    <string name="aniagudo_godson">Aniagudo Godson</string>
    <string name="track_android">Track: Android</string>
    <string name="country_nigeria">Country: Nigeria</string>
    <string name="email_aniagudo_godson_gmail_com">Email: aniagudo.godson@gmail.com</string>
    <string name="phone_number_08104898400">Phone Number: 08104898400</string>
    <string name="slack_username_aniagudo_godson">Slack USername: @aniagudo.godson</string>
</resources>
