<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

<android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
                                            android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="match_parent">
            <Button
                    android:text="@string/about_alc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/about_alc_button"
                    android:background="@drawable/blue_rounded"
                    android:textSize="70px"
                    android:paddingEnd="10dp"

                    android:paddingStart="10dp"
                    android:textColor="#fff"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toBottomOf="@+id/textView"
                    android:layout_marginTop="32dp"/>
            <Button
                    android:text="@string/my_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/deep_grey_rounded"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="25sp"

                    android:textColor="#fff"
                    android:id="@+id/myProfile_button" android:layout_marginTop="44dp"
                    app:layout_constraintTop_toBottomOf="@+id/about_alc_button"
                    app:layout_constraintStart_toStartOf="@+id/about_alc_button"
                    app:layout_constraintEnd_toEndOf="@+id/about_alc_button" app:layout_constraintHorizontal_bias="1.0"/>
            <TextView
                    android:text="@string/welcome_to_alc_4_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" android:layout_marginTop="88dp" android:textSize="36sp"
                    android:textStyle="bold" android:textColor="@android:color/black" app:fontFamily="@font/aclonica"/>
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>